<resources>
    <string name="app_name">RDU Helper</string>
    <string name="play_store_app_link" translatable="false">https://play.google.com/store/apps/details?id=%s</string>
    <string name="button_text_forum">Форум</string>
    <string name="button_text_photos_videos">Фото и видео с турниров</string>
    <string name="button_text_photos_helpful_links">Полезные ссылки</string>
    <string name="button_text_share_title">Поделиться этим приложением</string>
    <string name="button_text_useful_links">Федерации и Организации</string>
    <string name="button_text_russian_master">russianmaster</string>
    <string name="button_text_search_partner">Поиск партнёра/парнёрши</string>
    <string name="button_text_competitions">Соревнования</string>
    <string name="button_text_competitions_ro">Соревнования РО</string>
    <string name="button_text_documents">Документы</string>
    <string name="button_text_eadc">Рейтинг EADC соло девочки</string>
    <string name="button_text_class_of_dancers">Классы танцоров</string>
    <string name="button_text_rating">Рейтинг</string>
    <string name="button_text_main">Главная</string>
    <string name="button_text_image_studio">Имидж-Студии</string>
    <string name="button_text_instagram">Instagram</string>
    <string name="button_text_dancersunderstand">_dancersunderstand_</string>
    <string name="button_text_fk_dancesport1">fk_dancesport1</string>
    <string name="button_text_BallroomPhoto">Ballroom.Photo</string>
    <string name="button_text_dancesport">dancesport</string>
    <string name="button_text_QuickDancePhoto">QuickDancePhoto</string>
    <string name="button_text_prospect_of_development">Перспективы развития</string>
    <string name="button_text_site_rdu">Российский Танцевальный Союз</string>
    <string name="button_text_site_wdc">World Dance Council</string>
    <string name="button_text_site_eadc">EURO ASIAN DANCE COUNCIL</string>
    <string name="button_text_site_mfst">Московская Федерация Спортивного Танца</string>
    <string name="button_text_site_ofsd">Открытая Федерация Спортивного Танца</string>
    <string name="button_text_site_modl">Московская Областная Танцевальная Лига</string>
    <string name="button_text_site_mts">Московский Танцевальный Союз</string>
    <string name="button_text_site_spts">Санкт-Петербургский Танцевальный Союз</string>
    <string name="button_text_site_ro_rts">РО РТС Санкт-Петербурга</string>
    <string name="button_text_site_ro_totl">Тульская Областная Танцевальная Лига</string>
    <string name="button_text_site_wdo">World Dance Organizers</string>
    <string name="button_text_site_mta">Moscow Dance Alliance</string>
    <string name="text_slogan">"Танцуйте и будьте счастливы!"</string>
    <string name="text_name">Перспективы развития</string>
    <string name="text_appeal">Уважаемые коллеги, танцоры, тренеры, педагоги, организаторы РТС!</string>
    <string name="text_about_popov">С уважением, Станислав Попов
Президент РТС
Почетный Вице-Президент WDC
Президент EADC
Вице-Президент APDC
Заслуженный деятель искусств РФ</string>
    <string name="text_speach">

Завершаются летние каникулы и наступает новый сезон в жизни и творчестве Российского танцевального союза! Он будет насыщен новыми событиями, турнирами самого разного уровня, проведением конгрессов и мастер классов, концертами и показательными выступлениями.

Сегодня РТС одна из крупнейших и влиятельнейших организаций Всемирного танцевального совета, начинает свой 33 сезон со дня его основания как Творческой комиссии по бальной хореографии Всесоюзного музыкального общества в 1987 году.

За эти годы РТС, расширяя границы своей деятельности, объединил в своих рядах около 50 Региональных отделений и Региональных организаций, ведущих плодотворную деятельность по развитию профессионального и любительского танцевального движения, пропаганде танцевального спорта, как эффективного средства гармонического воспитания населения России.

За последние 10 лет в рамках деятельности РТС, были проведены более 1000 турниров. Региональных, межрегиональных, всероссийских и международных. С 2001 года РТС провел около 30 официальных чемпионатов Европы и мира среди профессионалов в Москве, Казани, Омске, С.Петербурге, Тюмени, Тобольске в различных программах, став лидером в организации официальных чемпионатов Всемирного танцевального совета (WDC). Один из лучших в мире турниров, «Кубок мира в Кремле», проводится в этом сезоне в 23 раз. Растет популярность замечательного международного турнира «Осенняя Москва», все больше собирают поклонников и лучшие пары мира «Crystal Ball» в Санкт Петербурге и другие международные турниры.

В РТС выросла целая плеяда выдающихся профессиональных исполнителей и поколения чемпионов, которые стали тренерами и наставниками, воспитателями будущих поколений танцоров, представляющих Россию на международных турнирах.

Бренд РТС стал узнаваем и уважаем в системе культурных и спортивных ценностей страны. Не случайно деятельность Президента РТС была высоко оценена высшей наградой Национального Олимпийского комитета России «За выдающийся вклад в развитие Олимпийского движения», высшей наградой Министерства культуры РФ «За выдающийся вклад в развитие российской культуры», высшей наградой Правительства Москвы, орденом «За заслуги перед Москвой».

Все эти награды я разделяю со своими коллегами в РТС, без которых, были бы невозможны те достижения, которые получили высокую оценку в российском обществе.

В сезоне 2019-2020 года перед нами стоят следующие большие задачи. Усовершенствовать систему работы и администрирования РТС. Сделать ее более функциональной и понятной. Создать новые направления в деятельности Союза. Этими вопросами в течение летних каникул напряженно занимались члены Президиума РТС.

Несомненно, наше внимание было сфокусировано на развитии любительского танцевального движения РТС, как школы профессионального танца и подготовки будущих тренеров и педагогов.

Я уверен, что всем организациям РТС, клубам, тренерам, педагогам и танцорам будет чрезвычайно интересно узнать, что на сайте РТС появится раздел «Любительское движение РТС»! В нем будут отображены все аспекты Любительского танцевального движения РТС с совершенно новаторскими разделами деятельности. От новых рейтингов различных Кубков РТС до системы функционирования базы данных РТС и традиционной регистрации на турниры!

В этом разделе вы увидите:

1. Рейтинг этапов Кубка РТС
а) каждый месяц опубликование рейтинга пар
б) в конце года опубликование результатов
в) в конце года награждение пар с вручением Дипломов РТС

2. Классификационный рейтинг этапов Кубка РТС:
а) каждый месяц опубликование рейтинга
б) в конце года опубликование результатов
в) в конце года награждение с вручением Дипломов РТС

3. Присвоение:
а) индивидуальных классов исполнительского мастерства каждому танцору РТС
б) бесплатное присвоение ID номера (База данных)

4. Рейтинг этапов Кубка среди солистов РТС (EADC)
а) каждый месяц опубликование рейтинга
б) в конце года опубликование результатов
в) в конце года награждение с вручением Дипломов РТС

5. Здесь будут размещаться Положения о проведении турниров

6. Здесь будут публиковаться результаты турниров

7. Здесь будет проводиться регистрация на турниры РТС

Несомненно, это новый шаг в развитии РТС и его деятельности! Он потребует слаженной работы всех подразделений РТС, региональных отделений, региональных организаций и руководителей клубов РТС.

РТС успешно продолжает свою деятельность как члена Всемирного танцевального совета. Вместе с тем развитие мирового танцевального движения создает новые предпосылки для эффективного сотрудничества танцевальных организаций разных стран. РТС оставляет за собой право участия в международных организациях, которые по форме являются общественными некоммерческими организациями, федерациями, имеют понятную структуру и созвучны идеям РТС и WDC.

РТС получает предложения сотрудничества от различных новых организаций и будет внимательно подходить к возможности совместной деятельности. В этом свете РТС в настоящее время воздерживается от сотрудничества с IDU (Россия), так как наши отношения не имеют каких либо договоренностей и деятельность IDU, как закрытого акционерного общества (ЗАО), является частным бизнесом 3-х его участников. Более полную информацию можно получить в ЕГРЮЛ.

В настоящее время внимание РТС обращено на деятельность Евро Азиатского танцевального совета (Euro Asian Dance Council), общественной некоммерческой организации, объединяющей представителей 24 стран.

Решением Президиума в ноябре 2018 года РТС принял участие в создании Евро Азиатского танцевального совета. Этому предшествовало длительное эффективное сотрудничество стран Европы и Азии. Прежде всего России и Китая, которые стали основными участниками движения “One Belt One Road” (Один ремень Одна дорога).

Эта концепция развития культурных, спортивных и общественных связей между странами традиционного «Шелкового пути» (Silk Road), объединявшего многие страны в течение столетий, стала государственной программой в Китае.

Одновременно движение нашей страны в сторону Азии и укрепление Евро Азиатского сотрудничества, стало одним из важнейших направлений политики и деятельности России. Принимая участие в этом движении РТС, как Общероссийская Общественная Организация, решает определенную важную для государства политическую и гуманитарную задачу, которая получила одобрение государственных органов управления.

В январе 2019 года в Вене состоялась инаугурационная встреча представителей 15 стран, которые приняли решение о создании Евро Азиатского танцевального совета.

10 июня в Римини (Италия) прошел первый AGM (Annual General Meeting) Евро Азиатского танцевального совета, где были выбраны руководящие органы и приняты определенные решения по развитию организации (EADC Press relies №2 на сайте РТС). На этой встрече было выражено также мнение о необходимости направления в WDC заявки на аффилированное членство во Всемирном танцевальном совете (Affiliated membership).

В настоящее время в составе организации национальные члены WDC, национальные организации, такая как FIDS (Италия) и China Ballroom Dancing Federation, международные организации, такая как International Dance Asia (Президент, Почетный Вице-Президент WDC Марсел Де Райк).

Организация официально зарегистрирована в России, регистрируется в странах ЕС, Украине, Японии, Китае. Открыты счета EADC. Утверждены логотип, бланк и печать организации.

В ближайшее время на сайте EADC (в стадии обновления) будут опубликованы Устав, календарь, правила соревнований, условия членства и другие документы.

21 декабря в великолепном новом концертном зале ЭКСПО Екатеринбург пройдет первый официальный чемпионат EADC в категориях любители и Юниоры 2 (СТ и ЛА), каждая страна может представить не более 2х пар в каждой номинации. Мы желаем успеха российским танцорам, которые будут соревноваться за титулы Евро Азиатского чемпионата!

В календаре РТС появятся турниры солистов EADC, организаторы турниров могут предложить свои турниры в календарь EADC, чтобы расширить рамки своего творческого сотрудничества с другими клубами из-за рубежа.

Уважаемые коллеги нас ждет новый интересный сезон, и я благодарю организации, которые своей деятельностью вносят свой вклад в успех РТС. Московскую федерацию спортивных танцев, Московский танцевальный союз, Московский танцевальный альянс, Федерацию танцевального спорта Московской области, Санкт Петербургский танцевальный союз и Региональное отделение РТС Санкт Петербурга, Национальную танцевальную лигу, Северо-Западную танцевальную лигу, Таврический танцевальный союз, Ярославскую танцевальную лигу, Региональное отделение и региональные организации Юга России, Южный танцевальный союз, Спортивные танцы Дона, региональные отделения РТС центрального федерального округа России и другие региональные отделения и организации РТС!

Я желаю вам плодотворной работы в избранном вами благородном и нужным стране виде деятельности!</string>
</resources>