<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RussianMasterNavigator">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMain"
                style="@style/rtsButton"
                android:text="@string/button_text_main" />

            <Button
                android:id="@+id/buttonraiting"
                style="@style/rtsButton"
                android:text="@string/button_text_raiting" />

            <Button
                android:id="@+id/buttonComps"
                style="@style/rtsButton"
                android:text="@string/button_text_competitions" />

            <Button
                android:id="@+id/buttonForum"
                style="@style/rtsButton"
                android:text="@string/button_text_forum" />

            <Button
                android:id="@+id/buttonSearch"
                style="@style/rtsButton"
                android:text="@string/button_text_search_partner" />


            <Button
                android:id="@+id/buttonDoc"
                style="@style/rtsButton"
                android:text="@string/button_text_documents" />


            <Button
                android:id="@+id/buttonClas"
                style="@style/rtsButton"
                android:text="@string/button_text_documents" />


            <Button
                android:id="@+id/buttonCompSR"
                style="@style/rtsButton"
                android:text="@string/button_text_competitions_ro" />

            <Button
                android:id="@+id/buttoneadc"
                style="@style/rtsButton"
                android:text="@string/button_text_eadc" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>