<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popov"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/text_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/large_text2"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/text_appeal"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text2"
                android:textStyle="bold|italic" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margain_start_end_small"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margain_start_end_small"
                android:text="@string/text_speach"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_text3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/margain_bottom_large"
                android:layout_marginTop="@dimen/margain_bottom_large"
                android:layout_marginStart="@dimen/margain_start_end_large"
                android:layout_marginEnd="@dimen/margain_start_end_large"
                android:gravity="right"
                android:text="@string/text_about_popov"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_text2"
                android:textStyle="italic" />

        </LinearLayout>

</ScrollView>